update uli ni gwyn

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Mr1cLF6t8sb8ojLwTDI4Xq+beghQw4EqkkFljuY98Ms=
+APP_KEY=base64:88d0IXuieHjTCvUlG2ea1hpI3uUbpzFMhIyetdNP/q0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gwyn
+DB_DATABASE=project_db
 DB_USERNAME=root
 DB_PASSWORD=
 
